# Extinction-Defense

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_run.sh  towers.txt
assets/: LICENSE.txt
assets/images/: map1.xcf
assets/maps/: map1.json
include/assets/: asset_manager.h
include/core/: app.h
include/enemy/: enemy.h
include/map/: map_data.h
include/player/: player.h
include/projectile/: projectile.h
include/tower/: tower.h
include/wave/: wave.h
src/: main.cpp
src/assets/: asset_manager.cpp
src/core/: .app.cpp.swp  app.cpp
src/enemy/: enemy.cpp
src/map/: map_data.cpp
src/player/: player.cpp
src/projectile/: projectile.cpp
src/tower/: tower.cpp
src/wave/: wave.cpp
tools/: png_to_map_json.cpp
